testing iframe redirect

--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html style="height: 100%;">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=/akalyx/build/">
-    <title>Redirecting...</title>
+    <title>Akalyx</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
 </head>
+<body>
+    <iframe src="/akalyx/build/" frameborder="0"></iframe>
+</body>
 </html>
